# smart-card

arduino/: Cargo.toml  README.md  validate.py
arduino/src/: main.rs
dashboard/: package-lock.json  package.json  tsconfig.json
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: Menu.tsx  Navbar.tsx  Sidebar.tsx  SidebarLayout.tsx  navbar.tsx
dashboard/src/interfaces/: student.ts
dashboard/src/pages/: Account.tsx  Dashboard.tsx
dashboard/src/utils/: Calculation.ts  Formatter.ts
server/: Cargo.toml
server/src/: main.rs
