[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["ws", "tracing"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = "9.2.0"
mongodb = "2.8.0"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = [
    "compression-full",
    "timeout",
    "cors",
    "metrics",
] }
